--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,10 @@
 	<modules>
 		<module>eureka-server</module>
 		<module>product-data-service</module>
+		<module>product-view-service-ribbon</module>
 		<module>product-view-service-feign</module>
+		<module>config-server</module>
+		<module>hystrix-dashboard</module>
+		<module>zuul</module>
 	</modules>
 </project>
